fix layout bugs

--- a/src/styles/cards.module.css
+++ b/src/styles/cards.module.css
@@ -19,7 +19,7 @@
 .form > div {
   background-color: #ffffff;
   margin: 20px;
-  width: calc(270px, 700px);
+  width: calc(260px, 700px);
   padding: 30px;
 }
 .addLink {
